--- a/YukariProject/Yukari/src/main/res/layout/activity_parent.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_parent.xml
@@ -5,6 +5,33 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/llFrameTitle"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sub Title"
+            android:id="@+id/tvFrameTitle"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:editable="false"
+            android:ellipsize="end"
+            android:layout_marginBottom="8dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/divider_horizontal_textfield"
+            android:scaleType="fitXY"
+            android:layout_marginTop="2dp" />
+    </LinearLayout>
+
     <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
