--- a/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
+++ b/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
@@ -9,25 +9,30 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="6dp"
         android:padding="6dp"
         android:focusable="true"
         android:clickable="true"
-        android:background="@drawable/selector_key_light_background">
+        android:background="@drawable/selector_key_light_background"
+        android:id="@+id/llMenuAccountParent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Active Accounts:" />
+            android:text="Active Accounts:"
+            android:layout_gravity="center_vertical"
+            android:focusable="false"
+            android:clickable="false" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="8dp"
             android:id="@+id/llMenuAccounts" />
     </LinearLayout>
 
