--- a/Yukari/src/main/res/values/themes_yukaritheme.xml
+++ b/Yukari/src/main/res/values/themes_yukaritheme.xml
@@ -43,6 +43,24 @@
 
         <item name="android:windowBackground">@drawable/dialog_full_holo_light</item>
 
+      <item name="android:colorBackground">@color/background_light</item>
+      <item name="android:colorForeground">@color/bright_foreground_light</item>
+      <item name="android:colorForegroundInverse">@color/bright_foreground_light_inverse</item>
+      <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+      <item name="android:textColorSecondary">@android:color/secondary_text_light</item>
+      <item name="android:textColorTertiary">@android:color/tertiary_text_light</item>
+      <item name="android:textColorPrimaryInverse">@android:color/primary_text_dark</item>
+      <item name="android:textColorSecondaryInverse">@android:color/secondary_text_dark</item>
+      <item name="android:textColorTertiaryInverse">@android:color/tertiary_text_dark</item>
+      <item name="android:textColorPrimaryNoDisable">@android:color/primary_text_light_nodisable</item>
+      <item name="android:textColorSecondaryNoDisable">@android:color/secondary_text_light_nodisable</item>
+      <item name="android:textColorPrimaryInverseNoDisable">@android:color/primary_text_dark_nodisable</item>
+      <item name="android:textColorSecondaryInverseNoDisable">@android:color/secondary_text_dark_nodisable</item>
+      <item name="android:textColorHint">@color/hint_foreground_light</item>
+      <item name="android:textColorHintInverse">@color/hint_foreground_dark</item>
+      <item name="android:textColorHighlight">@color/highlighted_text_light</item>
+      <item name="android:textColorLink">@color/link_text_light</item>
+
         <item name="android:editTextStyle">@style/EditTextYukariTheme</item>
 
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariTheme</item>
