--- a/YukariProject/Yukari/src/main/res/values/colors.xml
+++ b/YukariProject/Yukari/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <drawable name="key_color">#ff7849ba</drawable>
     <drawable name="status_bar_color">#cc7849ba</drawable>
 
+    <color name="bg_retweet">#ffd7dffd</color>
+    <color name="bg_mention">#EDB3DD</color>
+    <color name="bg_own">#EFDCFF</color>
+
     <drawable name="focus_key_color">@drawable/key_color</drawable>
     <drawable name="press_key_color">#ff613fa3</drawable>
 
