--- a/YukariProject/Yukari/src/main/res/layout/row_loading.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_loading.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/pbLoading"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="wrap_content"
