--- a/YukariProject/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/YukariProject/Yukari/src/main/res/layout/fragment_profile.xml
@@ -50,7 +50,7 @@
                 android:layout_alignTop="@+id/ibProfileSearch"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="8dp"
-                android:enabled="false"/>
+                android:enabled="true"/>
 
         <ImageView
                 android:layout_width="wrap_content"
