--- a/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
+++ b/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
@@ -216,7 +216,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:padding="8dp"
-                android:src="@drawable/ic_bookmark"
+                android:src="@drawable/ic_feedback"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -224,9 +224,10 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:paddingBottom="4dp"
-                android:text="ブックマーク"
+                android:text="レポート投稿"
                 android:textSize="@dimen/menudialog_textsize"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false" />
         </LinearLayout>
 
         <LinearLayout
